adicionando components Sobre, Projetos, Contato, Footer

--- a/src/styles/Apresentation.css
+++ b/src/styles/Apresentation.css
@@ -1,5 +1,6 @@
 .apresentation-container {
-  background-color: #040F16;
+  background-color: #060606;
+  width: 100%;
   color: white;
   display: flex;
   justify-content: center;
