--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,6 +1,7 @@
 .about-container {
-  background-color: #060606;
+  background-color: #040F16;
   color: white;
+  width: 100%;
   display: flex;
   justify-content: center;
 }
