--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -10,7 +10,8 @@
   justify-content: center;
   height: 90px;
   position: fixed;
-  width: 100vw;
+  z-index: 1000;
+  width: 100%;
 }
 
 .header-sub-container {
@@ -43,7 +44,14 @@
 }
 
 .logos-sociais {
-  margin: 0 10px;
   width: 20px;
+  height: 20px;
+  margin: 0 10px;
+  color: #FFF;
+}
+
+.logos-sociais:hover {
   color: #0094C6;
+  transition: 0.4s;
+
 }
