--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,11 +7,11 @@
   background-color: #060606;
   color: white;
   display: flex;
-  justify-content: center;
   height: 90px;
+  justify-content: center;
   position: fixed;
-  z-index: 1000;
-  width: 100%;
+  z-index: 1;
+  width: 100vw;
 }
 
 .header-sub-container {
@@ -30,14 +30,20 @@
   display: flex;
 }
 
-.options {
+.ant-anchor {
+  display: flex;
+}
+
+.ant-anchor-link-title {
   margin: 0 15px;
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
+  text-decoration: none;
+  color: white;
 }
 
-.options:hover {
+.ant-anchor-link-title:hover {
   color: #0094C6;
   cursor: pointer;
   transition: 0.4s;
@@ -53,5 +59,27 @@
 .logos-sociais:hover {
   color: #0094C6;
   transition: 0.4s;
+}
+
+ @media screen and ( min-width: 768px) and (max-width: 1023px) {
+  .logos-sociais {
+    display: none;
+  }
+}
+
+@media screen  and ( min-width: 479px) and (max-width: 767px) {
+  .logos-sociais {
+    display: none;
+  }
+}
+
+@media screen and ( max-width: 479px) {
+  .logos-sociais {
+    display: none;
+  }
+
+  .navbar-collapse {
+    justify-content:center;
+  }
 
 }
