--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -29,21 +29,64 @@
 
 .icons-contact-contain {
   display: flex;
- /*  flex-direction: column; */
+  margin-top: 30px;
   justify-content: center;
-  margin: 20px 150px;
 }
 
 .icons {
-  margin: 20px 0;
+  width: 40px;
+  height: 40px;
+  margin: 0 10px;
 }
 
 .whatsapp {
+  align-items: center;
   display: flex;
   font-family: 'Montserrat', sans-serif;
-  margin: 0 30px;
+  margin-left: 30px;
 }
 
 .info-whatsapp {
   margin: 17px 10px;
+}
+
+.info-whatsapp a {
+  text-decoration: none;
+  color: #FFF;
+}
+
+
+@media screen and ( min-width: 767px) and (max-width: 1023px) {
+  .icons-contact-contain {
+    flex-direction: column;
+  }
+  .whatsapp {
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+  }
+}
+
+@media screen  and ( min-width: 479px) and (max-width: 767px) {
+  .icons-contact-contain {
+    flex-direction: column;
+  }
+  .whatsapp {
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+  }
+}
+
+@media screen and ( max-width: 479px) {
+  .whatsapp {
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  }
+
+  .icons-contact-contain {
+    align-items: center;
+    flex-direction: column;
+  }
 }
