--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -16,9 +16,9 @@
 
 .icons-sociais {
   color: #FFF;
-  width: 50px;
-  height: 50px;
-  margin: 20px 10px;
+  width: 35px;
+  height: 35px;
+  margin: 20px 15px;
 }
 
 .icons-sociais:hover {
@@ -32,13 +32,14 @@
   margin-bottom: 50px;
 }
 
-.options-container p {
-  margin: 0 10px;
-  font-family: 'Montserrat', sans-serif;
-}
-
 .copyright {
   color: #FFF;
   font-family: 'Montserrat', sans-serif;
   font-size:  14px;
+}
+
+.footer-sobre a {
+  font-size: 15px;
+  margin: 0 10px;
+  font-weight: 100;
 }
