--- a/src/styles/Apresentation.css
+++ b/src/styles/Apresentation.css
@@ -1,9 +1,11 @@
 .apresentation-container {
+  overflow-x: hidden;
   background-color: #060606;
   width: 100%;
   color: white;
   display: flex;
   justify-content: center;
+  height: 100vh;
 }
 
 .apresentation-sub-container {
@@ -52,6 +54,8 @@
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
   font-weight: 700;
+  text-decoration: none;
+  text-align: center;
   margin: 0 10px;
   width: 100%;
   padding: 5px;
@@ -64,6 +68,7 @@
 .download:hover {
   opacity: 0.7;
   cursor: pointer;
+  color: #FFFFFF;
 }
 
 .enter-contact {
@@ -165,6 +170,10 @@
 
 @media screen and ( max-width: 479px) {
 
+  .apresentation-container {
+    height: 70vh;
+  }
+
   .apresentation-sub-container {
     margin-top: 10px;
   }
@@ -174,16 +183,16 @@
   }
 
   .hello {
-    font-size: 0.6rem;
+    font-size: 0.9rem;
     line-height: 2;
   }
 
   .douglas {
-    font-size: 0.9rem;
+    font-size: 1.3rem;
   }
   
   .develop {
-    font-size: 0.7rem;
+    font-size: 1.2rem;
   }
 
   .contain-buttons {
