--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -6,6 +6,7 @@
   display: flex;
   width: 100%;
   justify-content: center;
+  overflow-x: hidden;
   color: black;
 }
 
@@ -14,9 +15,9 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  width: 60%;
   color: black;
   margin: 70px;
+  width: 100%;
 }
 
 .project-title {
@@ -34,11 +35,16 @@
   width: 100%;
 }
 
+.img-card:hover {
+  transition: 0.4s;
+  transform: scale(1.09);
+}
+
 .projects-1 {
   background-color: #E7ECEF;
   display: flex;
   padding: 15px;
-  width: 300px;
+  width: 450px;
   border-radius: 5px;
   margin: 30px 10px;
 }
@@ -47,4 +53,60 @@
   cursor: pointer;
   transition: 0.4s;
   transform: scale(1.05);
+}
+
+.modal-dialog {
+  max-width: 1000px;
+}
+
+.modal {
+  display: flex;
+  justify-content: center;
+}
+
+.btn-close {
+  position: absolute;
+  top : 5px;
+  right: 5px;
+}
+
+.btn-project {
+  border-radius: 5px;
+  border: none;
+  background-color: #0094C6;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0 10px;
+  padding: 5px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn-github {
+  background-color: inherit;
+  border-radius: 5px;
+  border: 2px solid #0094C6;
+  color: #060606;
+  text-decoration: none;
+  padding: 5px;
+  width: 130px;
+  text-align: center;
+  font-weight: 700;
+
+}
+
+.btn-project:hover, .btn-github:hover {
+  color: black;
+  transition: all 0.3s;
+  transform: scale(1.05);
+}
+
+
+@media screen and ( max-width: 479px) {
+  .carousel-caption {
+    display: none;
+  }
+
 }
