--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -17,9 +17,8 @@
 }
 
 .about {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 800;
-  font-size: 50px;
+  font-family: 'Poppins', sans-serif;
+  font-size: calc(75% + 5.5vmin);
   color: #0094C6;
 }
 
@@ -35,9 +34,9 @@
 }
 
 .description-doug {
-  margin: 10px 30px;
-  font-size: 30px;
-  font-family: 'Montserrat', sans-serif;
+  margin: 0 30px;
+  font-size: calc(75% + 1.8vmin);
+  font-family: 'Poppins', sans-serif;
 }
 
 .description {
@@ -45,7 +44,9 @@
   width:  500px;
   line-height: 1.5;
   font-size: 18px;
-  font-family: "Helvetica Neue", "Helvetica";
+  color: #B2B2B2;
+  font-family: 'Roboto', sans-serif;
+  /* font-family: "Helvetica Neue", "Helvetica"; */
 }
 
 @media screen and ( min-width: 767px) and (max-width: 1023px) {
@@ -70,6 +71,11 @@
 }
 
 @media screen and ( max-width: 479px) {
+
+  .description {
+    width: 90%;
+  }
+
   .description-contain img {
     display: none;
   }
