--- a/src/styles/Apresentation.css
+++ b/src/styles/Apresentation.css
@@ -16,41 +16,45 @@
 }
 
 .apresentation {
-  font-family: 'Montserrat', sans-serif;
-  line-height: 2;
+  font-family: 'Poppins', sans-serif;
+  /* line-height: 2; */
   width: 50%;
 }
 
 .hello {
   color: #E7ECEF;
-  font-size: 30px;
-  line-height: 3;
+  font-size: calc(75% + 1.5vmin);
+  line-height: 2;
 }
 
 .douglas {
   color: #E7ECEF;
-  font-size: 50px;
+  font-size: calc(75% + 4.5vmin);
 }
 
 .develop {
-  font-size: 40px;
+  font-size: calc(75% + 3.1vmin);
   color: #0094C6; 
 }
 
 .contain-buttons {
+  width: 70%;
   display: flex;
   align-items: center;
 }
 
 .contain-buttons a {
+  padding: 10px;
   width: 100%;
+  font-size: calc(75% + 0.5vmin);
+  font-weight: 700;
 }
 
 .download {
   border-radius: 5px;
   border: none;
   background-color: #0094C6;
-  color: white;
+  color: #ffffff;
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -72,16 +76,17 @@
 }
 
 .enter-contact {
-  text-align: center;
-  text-decoration: none;
-  color: white;
-  background-color: #060606;
   border-radius: 5px;
-  border: none;
   border: 1px solid #0094C6;
+  background-color: inherit;
+  color: white;
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
   font-weight: 700;
+  text-decoration: none;
+  text-align: center;
+  margin: 0 10px;
+  width: 100%;
   padding: 5px;
 }
 
@@ -91,11 +96,11 @@
 }
 
 .img-me {
-  margin-top: 70px;
+  /* margin-top: 70px; */
   width: 50%;
 }
 
-@media screen and ( min-width: 617px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .apresentation-sub-container {
     margin-top: 40px;
   }
@@ -104,115 +109,63 @@
     margin-top: 50px;
   }
 
-  .hello {
-    font-size: 1rem;
-    line-height: 1;
-  }
-
-  .douglas {
-    font-size: 2rem;
-  }
-  
-  .develop {
-    font-size: 1.2rem;
-  }
-
   .icon-download {
     display: none;
-  }
-
-  .download {
-    margin: 0 5px;
-    font-size: 0.8rem;
-  }
-
-  .enter-contact {
-    font-size: 0.8rem;
-  }
-}
-
-@media screen  and ( min-width: 479px) and (max-width: 617px) {
-
-  .apresentation-sub-container {
-    margin-top: 40px;
-  }
-
-  .apresentation {
-    margin-top: 50px;
-  }
-
-  .hello {
-    font-size: 0.9rem;
-    line-height: 1;
-  }
-
-  .douglas {
-    font-size: 1.5rem;
-  }
-  
-  .develop {
-    font-size: 0.9rem;
-  }
-
-  .icon-download {
-    display: none;
-  }
-
-  .download {
-    margin: 0 5px;
-    font-size: 0.5rem;
-  }
-
-  .enter-contact {
-    font-size: 0.5rem;
-  }
-}
-
-@media screen and ( max-width: 479px) {
-
-  .apresentation-container {
-    height: 70vh;
-  }
-
-  .apresentation-sub-container {
-    margin-top: 10px;
-  }
-
-  .apresentation {
-    margin-top: 100px
-  }
-
-  .hello {
-    font-size: 0.9rem;
-    line-height: 2;
-  }
-
-  .douglas {
-    font-size: 1.3rem;
-  }
-  
-  .develop {
-    font-size: 1.2rem;
   }
 
   .contain-buttons {
     flex-direction: column;
-    align-items: center;
-    width: 70%;
   }
 
-  .icon-download {
+  .contain-buttons a {
+    margin: 10px;
+  }
+
+}
+
+@media screen and (max-width: 685px) {
+  .apresentation-sub-container {
+    width: 100%;
+  }
+
+  .apresentation {
+    width: 90%;
+  }
+
+  .img-me {
     display: none;
   }
-
-  .download {
-    margin: 10px 0;
-    font-size: 0.5rem;
-    width: 100%;
-  }
-
-  .enter-contact {
-    font-size: 0.5rem;
-    width: 100%;
-  }
+  
 }
+
+@media screen and ( max-width: 479px) {
+  .apresentation-sub-container {
+    /* border: 1px solid red; */
+    flex-direction: column;
+  }
+
+  .apresentation {
+    /* border: 1px solid red; */
+    flex-direction: column;
+    width: 90%;
+  }
+
+  .contain-buttons {
+    /* border: 1px solid red; */
+    flex-direction: column;
+    width: 100%;
+    margin-top: 70px;
+  }
+
+  .contain-buttons a {
+    margin: 10px;
+  }
+  
+  .img-me {
+    display: none;
+  }
+  
+}
+
+
+
