--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -22,9 +22,8 @@
 }
 
 .contact-title {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 800;
-  font-size: 50px;
+  font-family: 'Poppins', sans-serif;
+  font-size: calc(75% + 5.5vmin);
   color: #0094C6;
 }
 
@@ -87,7 +86,10 @@
   }
 
   .icons-contact-contain {
-    align-items: center;
     flex-direction: column;
+  }
+
+  .whatsapp {
+    margin: 0;
   }
 }
