--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -22,9 +22,8 @@
 
 .project-title {
   margin-top: 50px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 800;
-  font-size: 50px;
+  font-family: 'Poppins', sans-serif;
+  font-size: calc(75% + 5.5vmin);
   color: #0094C6;
 }
 
